# CUDA-OP

./: CMakeLists.txt  README.md  main.cpp
op/flashattn/: flash-nano.cu  flash-nano.cuh
op/neuron/: if.cu  if.cuh  lif.cu  lif.cuh  neuron_common.h  plif.cu  plif.cuh
